--- a/VRChat/94/1038394.html
+++ b/VRChat/94/1038394.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8IOh3G890TaUqx4bOhOgwXJ0sXJZJ9BQpPRycmjMYok="></script>
+    "D0u2dxCLoCooypE/NMEyZU0vfFFKoNxzn7L2scKuZYw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ハロウィンサイズ[FBXデータファイル　3DCGオブジェクト]","description":"【品名】fbx datafile 3DCG object [ハロウィンサイズ][Halloween scythe]フリー素材\n\n◆利用想定　VRchat Vtuber\n\n◆ハロウィンサイズの３Ｄ素材です。\n\n◆Unity にインポートできるのを確認しました。\n（その他不明）\n\n◆使用ポリゴン数300\n\n※サムネイルにある魔女のモデルはついていません。\n\n【Version】1.00\n【最終更新日】2018.10.06\n【Copyright】©2018つくｘ２工房.Maiky","url":"https://booth.pm/ja/items/1038394","offers":{"priceCurrency":"JPY","@type":"Offer","price":"128"},"image":"https://booth.pximg.net/c/620x620/50c466f8-ea25-4d84-97fb-a601d0055de7/i/1038394/f7016d9f-8040-4aaf-9a87-f8b7c4350e73_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8IOh3G890TaUqx4bOhOgwXJ0sXJZJ9BQpPRycmjMYok="></script>
+    nonce="D0u2dxCLoCooypE/NMEyZU0vfFFKoNxzn7L2scKuZYw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -185,7 +187,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1038394/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -200,14 +202,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1038394/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
