--- a/VRChat/15/1372215.html
+++ b/VRChat/15/1372215.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gTujd080kqhjwQ7qapjUjIJHkARz3e8o6WzxrEZ8qns="></script>
+    "Zq6Ufo8HQ7q+eJvlnyWveYtHRU2WVJnsOWe2FBy5H8k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けオリジナル3Dモデル「家具＆家電詰め合わせ」","description":"昭和～平成初期あたりに普及していたであろう家具・家電の詰め合わせです。全6種類\n\nオリジナル3Dモデル「家具＆家電詰め合わせ」紹介文及び利用規約\n\n使用者は配布モデルの利用に先立ち、当規約の内容全てに同意をした上で配布物を利用可能なものといたします。\nまた、本モデルデータをダウンロード及び購入をした時点で利用規約に同意したものとみなします。\n\n内容物：\n\n●モデルデータ\n・dentou.fbx\n1メッシュ・三角ポリゴン数：3734\n・hotplate.fbx\n3メッシュ（本体・蓋・プラグ）・ポリ：2946\n・suihanki.fbx\n2メッシュ（本体・米）・ポリ：2986\n・tansu.fbx\n1メッシュ・ポリ：4584\n・tyabudai+zabuton.fbx\n2メッシュ（机・座布団）・ポリ：1480\n\n\n●プレハブ\n・dentou.prefab　　シェイプキーで紐の長さが調整可能です。\n・hotplate.prefab　プラグにボーンが入っているため、ある程度配線を伸ばす表現が可能です。\n・suihanki.prefab　蓋にボーンが入っているので、開閉のアニメーション等の作成が可能です\n・tansu.prefab　　すべての引き出し、引き戸にボーンが入っているため、開閉のアニメーション等の作成が可能です\n・tyabudai+zabuton.prefab　\n\nUnityのシーン上にD\u0026Dをするだけでマテリアルの設定等が完了しているモデルが配置できます。\n\n●マテリアル\n・dentou.mat\n・glass.mat\n・hotplate.mat\n・suihanki.mat\n・okome.mat\n・tansu.mat\n・tyabudai.mat\n\n●各マテリアルごとのテクスチャ\n・AlbedoTransparency.png　通常では使用していません。\n・MetallicSmoothness.png\n・Normal.png\n・2Dview.png　基本色としてマテリアルに登録をしているテクスチャです。\nAlbedoTransparency.pngをマテリアルに登録するとある程度アニメ寄りなフラットな見た目になります。\n・height.png\n\n・Readme.txt\n本ページに記載している文と同じtxtファイルです。","url":"https://booth.pm/ja/items/1372215","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/b8474108-5499-4da9-b74d-db41150399f3/i/1372215/330a11fa-71d2-45f2-b05a-1bdcec09ada7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gTujd080kqhjwQ7qapjUjIJHkARz3e8o6WzxrEZ8qns="></script>
+    nonce="Zq6Ufo8HQ7q+eJvlnyWveYtHRU2WVJnsOWe2FBy5H8k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1372215/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               98
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1372215/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               98
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
