--- a/VRChat/69/1037169.html
+++ b/VRChat/69/1037169.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "E87JPjx+NctVWX8BQYS7iNw2ldZgXLS72qcbJLohXy8="></script>
+    "70iXsmkNUJvW80XgOaywzcpUUQ0M0Uy0vzHraSpH9l8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クロエ","description":"【VRC対応】クロエちゃん Ver.1.1\nVRアバター向けのオリジナル3Dモデルです。\n\nUnityのHumanoid形式に対応。\nUnityパッケージ同梱。\nVRChatにすぐアップロード可能です。\n※揺れ物にDynamicBone(有料)を使用しています。\n\nSketchfabでモデルが閲覧できます。\nhttps://sketchfab.com/models/3918ecefb48d4041a2171444cf138ffa\n------------------------------------------------------\n■同梱データ\n・Chloe_ver1.1.UnityPackage\n・OBJ テクスチャ\n・Readme.txt\n\n■利用規約について\n・再配布不可\n・商用利用不可\n・エロ、グロに該当する表現への利用不可\n・モデル改造可(再配布、商用は不可)\n\n連絡先：https://twitter.com/HiROblueufo\n\n2018/Ver.1.0 販売開始\n2018/11/06 Ver.1.1更新","url":"https://booth.pm/ja/items/1037169","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3800"},"image":"https://booth.pximg.net/c/620x620/f8539628-dba9-41fe-91a7-3c4427c5ffaf/i/1037169/d74505a5-75d7-47ee-a090-2e2012463562_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="E87JPjx+NctVWX8BQYS7iNw2ldZgXLS72qcbJLohXy8="></script>
+    nonce="70iXsmkNUJvW80XgOaywzcpUUQ0M0Uy0vzHraSpH9l8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1037169/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               185
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1037169/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               185
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
