--- a/VRChat/66/1037366.html
+++ b/VRChat/66/1037366.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6/7khNscRrwA8KyEfn7N37BjRXiR2Ta2fq9s+Q8qNvM="></script>
+    "xia8qQgE4vnlzCJNRrTKocd1DdiAhadFqhK+jBEKQhs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"蝶（オオルリアゲハ）のローポリ3Dモデル△8ポリゴン、テクスチャ5色、UnityのAnimation付【オリジナル3Dモデル】","description":"蝶（オオルリアゲハ）のローポリ3Dモデル（△8ポリゴン）、ベースの黒と5色のEmission用テクスチャです。\n\nUnityPackageには羽を動かすアニメーション入り。\nPrefabはAnimatorを設定してあります。\n（2018/10/05確認、そのままVRChatでも動きました。）\n\nVRChatのアバター、ワールドでの使用を想定して、容量を抑えることができる仕様にしてあります。\n---------------------------------------------------------------\nファイルの中身\n・OoruriAgeha.unitypackage\n・OoruriAgeha.fbx（△8ポリゴン）\n・OoruriAgeha.tga\n・OoruriAgeha_Emission_Blue.tga\n・OoruriAgeha_Emission_Green.tga\n・OoruriAgeha_Emission_Orange.tga\n・OoruriAgeha_Emission_Purple.tga\n・OoruriAgeha_Emission_Red.tga\n\nテクスチャデータはサイズ1024で制作しました。\n圧縮前のデータをzipに入れてあります。\nファイルサイズが大きいので、unityで使う際に圧縮をしてください。\nunitypackage内のテクスチャはサイズ512で圧縮もしてあります。\n\nsampleシーンはunity version 5.6.3p1で制作しました。\n\n改変自由。\n3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。\n誹謗中傷、違法行為、または国防に関する法律に違反する行為への使用を禁止します。","url":"https://booth.pm/ja/items/1037366","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1037366/fcb65130-f479-46f6-b801-af712e32be77_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6/7khNscRrwA8KyEfn7N37BjRXiR2Ta2fq9s+Q8qNvM="></script>
+    nonce="xia8qQgE4vnlzCJNRrTKocd1DdiAhadFqhK+jBEKQhs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -121,6 +121,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -165,7 +167,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1037366/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               176
@@ -180,14 +182,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1037366/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               176
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
