--- a/VRChat/09/1037309.html
+++ b/VRChat/09/1037309.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fC4XSZsFTbHo6K3iw/HsTNkr0l9BpUzQ66USKWp8wO8="></script>
+    "1fNZNeaJszrffL1gT1fqPVUJ/9Pg5RHa8BUG/X+IGHs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"トリケラトプス","description":"トリケラトプスですが\nこいつも動きません\n化石です\nミュージアムとかに是非","url":"https://booth.pm/ja/items/1037309","offers":{"priceCurrency":"JPY","@type":"Offer","price":"108"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1037309/1e79ed10-f516-4d62-8057-ee267658c5a6_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fC4XSZsFTbHo6K3iw/HsTNkr0l9BpUzQ66USKWp8wO8="></script>
+    nonce="1fNZNeaJszrffL1gT1fqPVUJ/9Pg5RHa8BUG/X+IGHs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1037309/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1037309/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               10
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
